# autodata

./: .gitignore  CMakeLists.txt  LICENSE.txt
CMakeModules/: Config.cmake.in  FindPOCO.cmake  InstallPDBFiles.cmake  ModuleInstall.cmake
src/: CMakeLists.txt
src/autodata/: AutoDataConfig.h.in  CMakeLists.txt  CompilerGuards.h  Struct.cxx  Struct.h
src/autodata/agg/: Function.cxx  Function.h
src/autodata/db/: Common.cxx  Common.h  Connection.cxx  Connection.h  Query.cxx  Query.h
src/autodata/dynamic/: Record.cxx  Record.h  Struct.cxx  Struct.h  Table.cxx  Table.h
src/autodata/util/: DataHelper.cxx  DataHelper.h  TraitsHelper.cxx  TraitsHelper.h  TupleHelper.cxx  TupleHelper.h  VariantHelper.cxx  VariantHelper.h  Version.cxx  Version.h
src/cppiter/: CMakeLists.txt  collapse.hpp
src/cppitertools/: CMakeLists.txt
src/cpplinq/: CMakeLists.txt
src/swig/: CMakeLists.txt  common.i  postbuild.cmake
src/swig/Poco/: CMakeLists.txt  module.i
src/swig/Poco/Data/: CMakeLists.txt  module.i
src/swig/Poco/Dynamic/: CMakeLists.txt  module.i
src/swig/autodata/: CMakeLists.txt
src/swig/autodata/db/: CMakeLists.txt  module.i
src/swig/autodata/util/: CMakeLists.txt  module.i
src/swig/std/: CMakeLists.txt  module.i
src/tests/: CMakeLists.txt  agg_test.cxx  autodata_test.cxx  cppiter_test.cxx  test.cxx
src/tests/python/: autodata_util_test.py  std_test.py
